--- a/rutorrent/css/stable.css
+++ b/rutorrent/css/stable.css
@@ -25,6 +25,7 @@
 .gecko .stable-move-header {background: rgba(255,255,255,0.7); -moz-opacity: 0.7;}
 .ie .stable-move-header {background: rgba(255,255,255,0.7); filter:alpha(opacity=70)}
 .webkit .stable-move-header {background: rgba(255,255,255,0.7);}
+.opera .stable-move-header {background: rgba(255,255,255,0.7);}
 .stable-active-header {border-color: threedface !important}
 .stable-separator-header {position: absolute; top: 0px; left: 0px; font: menu; height: 1em; width: 1px; overflow: hidden; background: #0099FF; padding: 3px 0px}
 .stable-virtpad {width: 10px; height: 0px}
