--- a/plugins/darkpal/style.css
+++ b/plugins/darkpal/style.css
@@ -1,5 +1,5 @@
 html, body {background-color: #181818; color: #999999; }
-div#preload {width: 0px; height: 0px; display: none; background-image: url(./images/toolbar2.gif); background-image: url(./images/tstatus.gif); background-image: url(./images/t_bg.png); background-image: url(./images/r_bg.gif); background-image: url(./images/i_bg.gif); background-image: url(./images/asc.gif); background-image: url(./images/desc.gif); background-image: url(./images/hide.gif); background-image: url(./images/hide_over.gif); background-image: url(./images/hide_on.gif); background-image: url(./images/pnl_open.gif); background-image: url(./images/pnl_close.gif)}
+div#preload {width: 0px; height: 0px; display: none; background-image: url(./images/toolbar.png); background-image: url(./images/tstatus.png); background-image: url(./images/t_bg.png); background-image: url(./images/r_bg.gif); background-image: url(./images/i_bg.gif); background-image: url(./images/asc.gif); background-image: url(./images/desc.gif); background-image: url(./images/pnl_open.gif); background-image: url(./images/pnl_close.gif)}
 div#cover {background: #181818}
 div#msg {background: #181818; border-top: 1px solid #333333; border-bottom: 1px solid #333333}
 div#sc {border: 1px solid #333333; background-color: #181818}
@@ -24,43 +24,38 @@ ul.CMenu li ul li a.dis:hover {background-color: #181818; color: #333333}
 div#t {background: #181818 url(./images/t_bg.png) repeat-x center center; border-bottom: 1px solid #333333;}
 div#t a:hover {background: transparent url(./images/tb_bg.gif) no-repeat scroll center center}
 div#t div.TB_Separator {background-color: #333333}
-div#t div#add {background: transparent url(./images/toolbar2.gif) no-repeat left center}
-div#t div#remove {background: transparent url(./images/toolbar2.gif) no-repeat -24px center}
-div#t div#start {background: transparent url(./images/toolbar2.gif) no-repeat -48px center}
-div#t div#pause {background: transparent url(./images/toolbar2.gif) no-repeat -72px center}
-div#t div#stop {background: transparent url(./images/toolbar2.gif) no-repeat -96px center}
-div#t div#moveu {background: transparent url(./images/toolbar2.gif) no-repeat -168px center}
-div#t div#moved {background: transparent url(./images/toolbar2.gif) no-repeat -144px center}
-div#t div#setting {background: transparent url(./images/toolbar2.gif) no-repeat -168px center}
-div#t div#search {background: transparent url(./images/toolbar2.gif) no-repeat -120px center}
-a.h:link, a.h:visited {background: transparent url(./images/hide.gif);}
-a.h:hover {background: transparent url(./images/hide_over.gif);}
-a.h:active {background: transparent url(./images/hide_on.gif);}
+div#t div#add {background: transparent url(./images/toolbar.png) no-repeat -24px center}
+div#t div#create {background: transparent url(./images/toolbar.png) no-repeat -48px center}
+div#t div#remove {background: transparent url(./images/toolbar.png) no-repeat -72px center}
+div#t div#start {background: transparent url(./images/toolbar.png) no-repeat -96px center}
+div#t div#pause {background: transparent url(./images/toolbar.png) no-repeat -120px center}
+div#t div#stop {background: transparent url(./images/toolbar.png) no-repeat -144px center}
+div#t div#moveu {background: transparent url(./images/toolbar.png) no-repeat -168px center}
+div#t div#moved {background: transparent url(./images/toolbar.png) no-repeat -192px center}
+div#t div#search {background: transparent url(./images/toolbar.png) no-repeat -216px center}
+div#t div#rss {background: transparent url(./images/toolbar.png) no-repeat -240px center}
+div#t div#setting {background: transparent url(./images/toolbar.png) no-repeat -264px center}
+
+div#t div#help {background: transparent url(./images/quest.gif) no-repeat 0px center}
+div#t div#go {background: transparent url(./images/toolbar.png) no-repeat -96px center}
+
 input.Textbox, input.Button, select {border: 1px solid #333333}
 Input.TextboxShort {border: 1px solid #333333}
 Input.TextboxMid {border: 1px solid #333333}
 Input.TextboxLarge {border: 1px solid #333333}
 Input.TextboxVShort {border: 1px solid #333333}
-input.Button {background: #999999 url(./images/h.gif) repeat-x center bottom}
-a.hide:link, a.hide:visited {background: transparent url(./images/hide.gif);}
-a.hide:hover {background: transparent url(./images/hide_over.gif)}
-a.hide:active {background: transparent url(./images/hide_on.gif)}
+input.Button {background-color: #999999}
 a {color: #686868}
-div#CatList {border: 1px solid #333333; background-color: #181818}
 
-div#CatList ul li.sel {background-color: #888888; color:#111111}
-div#CatList ul li.sel#-_-_-all-_-_- {background-color: #888888; color:#111111}
-div#CatList ul li.sel#-_-_-dls-_-_- {background-color: #888888; color:#111111}
-div#CatList ul li.sel#-_-_-com-_-_- {background-color: #888888; color:#111111}
-div#CatList ul li.sel#-_-_-act-_-_- {background-color: #888888; color:#111111}
-div#CatList ul li.sel#-_-_-iac-_-_- {background-color: #888888; color:#111111}
-div#CatList ul li.sel#-_-_-err-_-_- {background-color: #888888; color:#111111}
-div#CatList ul li#-_-_-all-_-_- {background:url(./images/status_checking.gif) 6px no-repeat;}
-div#CatList ul li#-_-_-dls-_-_- {background:url(./images/status_down.gif) 6px no-repeat;}
-div#CatList ul li#-_-_-com-_-_- {background:url(./images/status_up.gif) 6px no-repeat;}
-div#CatList ul li#-_-_-act-_-_- {background:url(./images/status_up_down.gif) 6px no-repeat;}
-div#CatList ul li#-_-_-iac-_-_- {background:url(./images/status_incompleted.gif) 6px no-repeat;}
-div#CatList ul li#-_-_-err-_-_- {background:url(./images/status_error.gif) 6px no-repeat;}
+div#CatList {border: 1px solid #333333; background-color: #181818}
+div#CatList ul li {border-color: #181818}
+div#CatList ul li.sel {background-color: #888888; color:#111111; border-color: #888888 }
+#-_-_-all-_-_-, #-_-_-dls-_-_-, #-_-_-com-_-_-, #-_-_-act-_-_-, #-_-_-iac-_-_-, #-_-_-err-_-_- {background-image: url(./images/tstatus.png)}
+div#CatList ul li.RSS {background-image: url(./images/tstatus.png); }
+div#CatList ul li.disRSS {background-image: url(./images/tstatus.png); }
+.stable-icon {background-image: url(./images/tstatus.png); }
+.Icon_File {background: transparent url(./images/file.gif) no-repeat left center}
+.Icon_Dir {background: transparent url(./images/dir.gif) no-repeat left center}
 
 div.tab {background: #181818}
 div#lcont {background: #181818}
@@ -72,33 +67,9 @@ div#List {border: 1px solid #333333;}
 div#List {border: 1px solid #333333; background-color: #181818}
 div#FileList, div#TrackerList, div#PeerList, div#Speed {background-color: #181818}
 
-.Status_Down {background: transparent url(./images/tstatus.gif) no-repeat left center}
-.Status_Up {background: transparent url(./images/tstatus.gif) no-repeat -16px center}
-.Status_Incompleted {background: transparent url(./images/tstatus.gif) no-repeat -32px center}
-.Status_Paused {background: transparent url(./images/tstatus.gif) no-repeat -48px center}
-.Status_Error_Down {background: transparent url(./images/tstatus.gif) no-repeat -64px center}
-.Status_Error_Up {background: transparent url(./images/tstatus.gif) no-repeat -80px center}
-.Status_Error {background: transparent url(./images/tstatus.gif) no-repeat -96px center}
-.Status_Completed {background: transparent url(./images/tstatus.gif) no-repeat -112px center}
-.Status_Queued_Down {background: transparent url(./images/tstatus.gif) no-repeat -128px center}
-.Status_Queued_Up {background: transparent url(./images/tstatus.gif) no-repeat -144px center}
-.Status_Up_Down {background: transparent url(./images/tstatus.gif) no-repeat -160px center}
-.Status_Checking {background: transparent url(./images/tstatus.gif) no-repeat -176px center}
-.ieStatus_Down {background: transparent url(./images/status_down.gif) no-repeat scroll left top;}
-.ieStatus_Up {background: transparent url(./images/status_up.gif) no-repeat scroll left top;}
-.ieStatus_Incompleted {background: transparent url(./images/status_incompleted.gif) no-repeat scroll left top;}
-.ieStatus_Paused {background: transparent url(./images/status_paused.gif) no-repeat scroll left top;}
-.ieStatus_Error_Down {background: transparent url(./images/status_error_down.gif) no-repeat scroll left top;}
-.ieStatus_Error_Up {background: transparent url(./images/status_error_up.gif) no-repeat scroll left top;}
-.ieStatus_Error {background: transparent url(./images/status_error.gif) no-repeat scroll left top;}
-.ieStatus_Completed {background: transparent url(./images/status_completed.gif) no-repeat scroll left top;}
-.ieStatus_Queued_Down {background: transparent url(./images/status_queued_down.gif) no-repeat scroll left top;}
-.ieStatus_Queued_Up {background: transparent url(./images/status_queued_up.gif) no-repeat scroll left top;}
-.ieStatus_Up_Down {background: transparent url(./images/status_up_down.gif) no-repeat scroll left top;}
-.ieStatus_Checking {background: transparent url(./images/status_checking.gif) no-repeat scroll left top;}
 div#stg { background-color: #181818; color: #888888; border: 1px solid #333333}
 
-div#stg-header {background: #181818 url(./images/settings.gif) no-repeat scroll 4px center; border-bottom: 1px solid #333333}
+div#stg-header {background-color: #181818; border-bottom: 1px solid #333333}
 div#stg .lm {background-color: #181818; border: 1px solid #333333}
 
 .lm li {background: transparent url(./images/bul.gif) no-repeat scroll left center}
@@ -118,25 +89,17 @@ div#tdetails {background-color: #181818}
 div#tdcont {background: #181818; border: 1px solid #333333}
 
 div#tadd {background-color: #181818; border: 1px solid #333333}
-div#tadd-header {background: #181818 url(./images/world.gif) no-repeat scroll 4px center; border-bottom: 1px solid #333333}
+div#tadd-header {background-color: #181818; border-bottom: 1px solid #333333}
 ul#tabbar li a {border: 1px solid #333333; }
 ul#tabbar li a:hover {border-top: 2px solid #222222}
 ul#tabbar li.selected a {border-top: 2px solid #999999; background: #181818; color: #888888}
-div#dlgLabel div.dlg-header {background-image: url(./images/label.gif)}
-div#dlgAbout div.dlg-header {background-image: url(./images/about.gif)}
-div#dlgHelp div.dlg-header {background-image: url(./images/about.gif)}
 
-div#dlgProps div.dlg-header {background-image: url(./images/props.gif)}
 div#dlgProps textarea#prop-trackers {background: #181818; border: 1px solid #333333}
 div.dlg-window {background-color: #181818; color: #888888; border: 1px solid #333333;}
-div.dlg-header { background: #181818 url(./images/blank.gif) no-repeat scroll 4px center; border-bottom: 1px solid #333333}
-a.dlg-close:link, a.dlg-close:visited {background: transparent url(./images/hide.gif);}
-a.dlg-close:hover { background: transparent url(./images/hide_over.gif); }
-a.dlg-close:active { background: transparent url(./images/hide_on.gif); }
+div.dlg-header { background-color: #181818; border-bottom: 1px solid #333333}
 
 div.tab {background-color: #181818}
 
-div#yesnoDlg div.dlg-header {background-image: url(./images/error.gif)}
 div#t div#ind {background: transparent url(./images/ajax-loader.gif) no-repeat 0px center;}
 
 span#loadimg {background: transparent url(./images/ajax-loader.gif) no-repeat center center; }
