--- a/plugins/unpack/unpack.css
+++ b/plugins/unpack/unpack.css
@@ -10,6 +10,6 @@ div#dlg_unpack br {clear: left; line-height: 0}
 #btn_unpack {width:30px}
 #btn_unpack1 {width:30px}
 
-div#dlg_unpack div.dlg-header {background-image: url(./images/edit16.gif)}
+div#dlg_unpack div.dlg-header {background-image: url(../../images/settings.gif)}
 
 div#st_unpack { display: none }
