--- a/plugins/datadir/datadir.css
+++ b/plugins/datadir/datadir.css
@@ -10,4 +10,4 @@ div#dlg_datadir br {clear: left; line-height: 0}
 
 #btn_datadir_browse {width:30px}
 
-div#dlg_datadir div.dlg-header {background-image: url(./images/edit16.gif)}
+div#dlg_datadir div.dlg-header {background-image: url(../../images/settings.gif)}
