--- a/plugins/edit/edit.css
+++ b/plugins/edit/edit.css
@@ -1,5 +1,5 @@
 div#tedit {width: 405px; height: 250px}
-div#tedit div.dlg-header {background-image: url(./images/edit16.gif)}
+div#tedit div.dlg-header {background-image: url(../../images/settings.gif)}
 div#tedit div.content {width: 380px; padding: 10px}
 div#tedit textarea#etrackers {width: 230px; height: 120px; border: 1px solid #D0D0D0; font-size: 11px; font-family: Tahoma, Arial, Helvetica, sans-serif; cursor: text; }
 
