--- a/rutorrent/css/style.css
+++ b/rutorrent/css/style.css
@@ -4,6 +4,8 @@ div#preload {width: 0px; height: 0px; display: none; background-image: url(../im
 div#cover {width: 100%; height: 100%; left: 0px; top: 0px; position: absolute; z-index: 500; background: #FFFFFF}
 div#msg {width: 100%; height: 100px; position: relative; top: 50%; margin-top: -50px; line-height: 100px; font-size: 11px; font-weight: bold; font-family: Tahoma, Arial, Helvetica, sans-serif; text-align: center; background: #FDFDFD; border-top: 1px solid #D0D0D0; border-bottom: 1px solid #D0D0D0}
 div#modalbg {width: 100%; height: 100%; left: 0px; top: 0px; position: absolute; z-index: 500; display: none; opacity: 0.5; background-color: #CCCCCC;}
+.konqueror div#modalbg { background: none; }
+.ie div#modalbg { background-color: transparent };
 sup {font-size: 8px}
 
 div.aright {text-align: right}
