--- a/plugins/autotools/autotools.css
+++ b/plugins/autotools/autotools.css
@@ -1,4 +1,4 @@
 #automove_browse_btn {width:30px}
 #autowatch_browse_btn {width:30px}
-#st_autotools {display: none; margin: 0}
+#st_autotools {display: none;}
 #ctrls_level2 {padding:0px 0px 0px 25px;}
