--- a/plugins/theme/themes/Acid/plugins.css
+++ b/plugins/theme/themes/Acid/plugins.css
@@ -12,4 +12,6 @@ div#dlgLoadTorrents div.dlg-header {background-image: url(./images/world.gif)}
 .tHeader {font-weight: bold;}
 .cCell {font-weight: bold; color: #272E36}
 
+.shieven {background: #272E36; }
+.shiodd {background: #323A46; }
 
