--- a/plugins/theme/themes/Dark/plugins.css
+++ b/plugins/theme/themes/Dark/plugins.css
@@ -1,3 +1,6 @@
 .exconsole, .console, .starterConsole {background: #333333}
 .cCell {color: black}
 
+.shieven {background: #333333; }
+.shiodd {background: #191919; }
+
