--- a/plugins/extsearch/extsearch.css
+++ b/plugins/extsearch/extsearch.css
@@ -12,6 +12,7 @@
 .EngineTorrentReactor {background-image: url(./images/torrentreactor.png); background-repeat: no-repeat}
 .EngineTorrentZap {background-image: url(./images/torrentzap.png); background-repeat: no-repeat}
 .EngineVector {background-image: url(./images/vertor.png); background-repeat: no-repeat}
+.EngineFreshOn {background-image: url(./images/freshon.png); background-repeat: no-repeat}
 
 div#tegLoadTorrents #RSSBtn {width: 30px;}
 div#tegLoadTorrents {width: 380px; height: 180px; overflow: visible}
