--- a/plugins/extsearch/extsearch.css
+++ b/plugins/extsearch/extsearch.css
@@ -14,6 +14,7 @@
 .EngineVector {background-image: url(./images/vertor.png); background-repeat: no-repeat}
 .EngineFreshOn {background-image: url(./images/freshon.png); background-repeat: no-repeat}
 .EngineWhatCD {background-image: url(./images/whatcd.png); background-repeat: no-repeat}
+.EngineFeedTheNet {background-image: url(./images/feedthenet.png); background-repeat: no-repeat}
 
 div#tegLoadTorrents #RSSBtn {width: 30px;}
 div#tegLoadTorrents {width: 380px; height: 180px; overflow: visible}
